# node-yolo

./: .gitignore  .gitmodules  .npmignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  NodeYoloJS-1.0.0.tgz  NodeYoloJS-1.0.1.tgz  NodeYoloJS.js  README.md  binding.gyp  index.js  libyolo.c  libyolo.h  module.cpp  module.h  node-yolo-1.0.2.tgz  package.json
common/include/: common.h
src/: Queue.cpp  Queue.h  module.cpp  module.h  napi_yolo_errors.c  napi_yolo_errors.h
util/: has_lib.js
yolo/src/: libyolo.c  libyolo.cpp  libyolo.h  opencv_handler.cpp  opencv_handler.h  private_structs.h  yolo_error.c  yolo_error.h
